fix(user-service):     1. пофикшен DriverProfile маппинг в DriverProfileController     2. применено использование ResponseEntity